--- a/Beatles/index.html
+++ b/Beatles/index.html
@@ -21,10 +21,10 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">inicio</a>
+            <a class="nav-link active" aria-current="page" href="/">inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">contactanos</a>
+            <a class="nav-link" href="/api">Api</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
